--- a/Q&A_PDFquery_Llama2_Pinecode_Langchain.ipynb
+++ b/Q&A_PDFquery_Llama2_Pinecode_Langchain.ipynb
@@ -5535,9 +5535,9 @@
     {
       "cell_type": "code",
       "source": [
-        "os.environ[\"HUGGINGFACEHUB_API_TOKEN\"] = \"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\"\n",
-        "PINECONE_API_KEY = os.environ.get('PINECONE_API_KEY', 'a563c4c9-295b-487a-8fa8-4e4fada87f63')\n",
-        "PINECONE_API_ENV = os.environ.get('PINECONE_API_ENV', 'gcp-starter')"
+        "os.environ[\"HUGGINGFACEHUB_API_TOKEN\"] = \"Your_API_KEY\"\n",
+        "PINECONE_API_KEY = os.environ.get('PINECONE_API_KEY', 'YOUR_KEY')\n",
+        "PINECONE_API_ENV = os.environ.get('PINECONE_API_ENV', 'ENV')"
       ],
       "metadata": {
         "id": "rbk2SsqNcSmH"
