--- a/Q&A_PDFquery_Llama2_Pinecode_Langchain.ipynb
+++ b/Q&A_PDFquery_Llama2_Pinecode_Langchain.ipynb
@@ -6228,7 +6228,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " The pre-trained ViT-H/14 model is trained on the ImageNet dataset dataset.\n",
+            " The pre-trained ViT-H/14 model is trained on the ImageNet dataset dataset.\n"
           ]
         },
         {
