--- a/Q&A_PDFquery_Llama2_Pinecode_Langchain.ipynb
+++ b/Q&A_PDFquery_Llama2_Pinecode_Langchain.ipynb
@@ -6240,7 +6240,7 @@
               "  Document(page_content='(which is pre-trained on the same dataset) on all tasks, while requiring substantially less computa-\\ntional resources to train. The larger model, ViT-H/14, further improves the performance, especially\\non the more challenging datasets – ImageNet, CIFAR-100, and the VTAB suite. Interestingly, this\\n5'),\n",
               "  Document(page_content='(which is pre-trained on the same dataset) on all tasks, while requiring substantially less computa-\\ntional resources to train. The larger model, ViT-H/14, further improves the performance, especially\\non the more challenging datasets – ImageNet, CIFAR-100, and the VTAB suite. Interestingly, this\\n5')],\n",
               " 'question': 'Which Dataset is used?',\n",
-              " 'output_text': ' The pre-trained ViT-H/14 model is trained on the ImageNet dataset dataset.\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n'}"
+              " 'output_text': ' The pre-trained ViT-H/14 model is trained on the ImageNet dataset dataset.'}"
             ]
           },
           "metadata": {},
